--- a/public/index.html
+++ b/public/index.html
@@ -9,13 +9,13 @@
   <meta content="yes" name="apple-mobile-web-app-capable" />
   <meta content="black" name="apple-mobile-web-app-status-bar-style" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-  <meta name="author" content="淘手游交易平台">
+  <meta name="author" content="tsy">
   <meta name="format-detection" content="telephone=no">
 
   <meta name="theme-color" content="#000000">
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
   <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
-  <title>React App</title>
+  <title>tsy</title>
 </head>
 
 <body>
